--- a/BancoDigital/View/LoginViewController.xib
+++ b/BancoDigital/View/LoginViewController.xib
@@ -21,35 +21,51 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-nZ-QgV">
-                    <rect key="frame" x="84" y="306" width="246" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4Q-VG-RKc">
-                    <rect key="frame" x="84" y="390" width="246" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpL-Qn-Tp1">
-                    <rect key="frame" x="84" y="361" width="48" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CPF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYC-i0-34B">
-                    <rect key="frame" x="84" y="277" width="32" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0a3-Qo-vVq">
-                    <rect key="frame" x="188" y="466" width="38" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ua8-xk-cIf">
+                    <rect key="frame" x="32" y="318.5" width="350" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpL-Qn-Tp1">
+                            <rect key="frame" x="0.0" y="0.0" width="48" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4Q-VG-RKc">
+                            <rect key="frame" x="0.0" y="28.5" width="350" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="password"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailingMargin" secondItem="c4Q-VG-RKc" secondAttribute="trailing" id="01i-sS-xJn"/>
+                        <constraint firstItem="c4Q-VG-RKc" firstAttribute="bottom" secondItem="ua8-xk-cIf" secondAttribute="bottomMargin" id="ulB-ds-JJb"/>
+                        <constraint firstItem="c4Q-VG-RKc" firstAttribute="leading" secondItem="ua8-xk-cIf" secondAttribute="leadingMargin" id="xPD-jg-Ddu"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dOP-SM-Yr1">
+                    <rect key="frame" x="32" y="224" width="350" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CPF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYC-i0-34B">
+                            <rect key="frame" x="0.0" y="0.0" width="31.5" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-nZ-QgV">
+                            <rect key="frame" x="0.0" y="28.5" width="350" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="Cjf-nZ-QgV" firstAttribute="leading" secondItem="dOP-SM-Yr1" secondAttribute="leadingMargin" id="CCY-Xn-x2o"/>
+                        <constraint firstItem="Cjf-nZ-QgV" firstAttribute="bottom" secondItem="dOP-SM-Yr1" secondAttribute="bottomMargin" id="CvU-9q-xeK"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="Cjf-nZ-QgV" secondAttribute="trailing" id="Y1i-pp-aTY"/>
+                    </constraints>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0a3-Qo-vVq">
+                    <rect key="frame" x="172" y="413" width="70" height="50"/>
+                    <inset key="contentEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
                     <state key="normal" title="Login"/>
                     <connections>
                         <action selector="loginButton:" destination="-1" eventType="touchUpInside" id="bEn-qN-zc7"/>
@@ -58,17 +74,34 @@
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qcG-Iz-k3i">
                     <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
                 </activityIndicatorView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_banco_digital" translatesAutoresizingMaskIntoConstraints="NO" id="aA2-tY-Jrk">
+                    <rect key="frame" x="87" y="76" width="240" height="116"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="fcB-Wz-eZH"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="dOP-SM-Yr1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="0zh-PP-Gdw"/>
+                <constraint firstItem="ua8-xk-cIf" firstAttribute="top" secondItem="dOP-SM-Yr1" secondAttribute="bottom" constant="32" id="32w-ft-BQa"/>
+                <constraint firstItem="0a3-Qo-vVq" firstAttribute="top" secondItem="ua8-xk-cIf" secondAttribute="bottom" constant="32" id="9Vw-3n-RoO"/>
                 <constraint firstItem="qcG-Iz-k3i" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="ARS-hb-LYU"/>
+                <constraint firstItem="dOP-SM-Yr1" firstAttribute="top" secondItem="aA2-tY-Jrk" secondAttribute="bottom" constant="32" id="Eqp-g3-DNC"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dOP-SM-Yr1" secondAttribute="trailing" constant="32" id="HTA-NJ-q8m"/>
+                <constraint firstItem="aA2-tY-Jrk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Hmm-Sg-Rat"/>
+                <constraint firstItem="ua8-xk-cIf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="QyM-BK-seD"/>
+                <constraint firstItem="aA2-tY-Jrk" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="32" id="SDF-QL-KKm"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ua8-xk-cIf" secondAttribute="trailing" constant="32" id="a4S-cZ-Vwj"/>
+                <constraint firstItem="0a3-Qo-vVq" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="vxa-Mz-jTd"/>
                 <constraint firstItem="qcG-Iz-k3i" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="xIc-em-HoQ"/>
             </constraints>
             <point key="canvasLocation" x="95.652173913043484" y="94.419642857142847"/>
         </view>
     </objects>
     <resources>
+        <image name="logo_banco_digital" width="165.68154907226562" height="116.46973419189453"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
