--- a/BancoDigital/View/ValueTransferViewController.xib
+++ b/BancoDigital/View/ValueTransferViewController.xib
@@ -190,8 +190,12 @@
                     </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc8-zZ-B8p">
-                    <rect key="frame" x="172.5" y="832" width="69" height="30"/>
+                    <rect key="frame" x="156.5" y="812" width="101" height="50"/>
+                    <inset key="contentEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
                     <state key="normal" title="Confirmar"/>
+                    <connections>
+                        <action selector="confirmButton:" destination="-1" eventType="touchUpInside" id="6nj-IH-vDO"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
