--- a/BancoDigital/View/LoginViewController.xib
+++ b/BancoDigital/View/LoginViewController.xib
@@ -30,10 +30,10 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4Q-VG-RKc">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite: 123456" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c4Q-VG-RKc">
                             <rect key="frame" x="0.0" y="28.5" width="350" height="34"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="password"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES" textContentType="password"/>
                         </textField>
                     </subviews>
                     <constraints>
@@ -51,7 +51,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-nZ-QgV">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite: 123.456.789-09" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-nZ-QgV">
                             <rect key="frame" x="0.0" y="28.5" width="350" height="34"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -71,15 +71,15 @@
                         <action selector="loginButton:" destination="-1" eventType="touchUpInside" id="bEn-qN-zc7"/>
                     </connections>
                 </button>
-                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qcG-Iz-k3i">
-                    <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
-                </activityIndicatorView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_banco_digital" translatesAutoresizingMaskIntoConstraints="NO" id="aA2-tY-Jrk">
                     <rect key="frame" x="87" y="76" width="240" height="116"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="fcB-Wz-eZH"/>
                     </constraints>
                 </imageView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="qcG-Iz-k3i">
+                    <rect key="frame" x="197" y="463" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -87,7 +87,7 @@
                 <constraint firstItem="dOP-SM-Yr1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="0zh-PP-Gdw"/>
                 <constraint firstItem="ua8-xk-cIf" firstAttribute="top" secondItem="dOP-SM-Yr1" secondAttribute="bottom" constant="32" id="32w-ft-BQa"/>
                 <constraint firstItem="0a3-Qo-vVq" firstAttribute="top" secondItem="ua8-xk-cIf" secondAttribute="bottom" constant="32" id="9Vw-3n-RoO"/>
-                <constraint firstItem="qcG-Iz-k3i" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="ARS-hb-LYU"/>
+                <constraint firstItem="qcG-Iz-k3i" firstAttribute="top" secondItem="0a3-Qo-vVq" secondAttribute="bottom" id="EAX-DY-cUB"/>
                 <constraint firstItem="dOP-SM-Yr1" firstAttribute="top" secondItem="aA2-tY-Jrk" secondAttribute="bottom" constant="32" id="Eqp-g3-DNC"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dOP-SM-Yr1" secondAttribute="trailing" constant="32" id="HTA-NJ-q8m"/>
                 <constraint firstItem="aA2-tY-Jrk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Hmm-Sg-Rat"/>
