--- a/BancoDigital/View/WelcomeCardViewController.xib
+++ b/BancoDigital/View/WelcomeCardViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WelcomeViewController" customModule="BancoDigital" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WelcomeCardViewController" customModule="BancoDigital" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -18,19 +18,22 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j0p-Dr-GAZ">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <viewLayoutGuide key="contentLayoutGuide" id="daN-EA-O5z"/>
-                    <viewLayoutGuide key="frameLayoutGuide" id="Xps-s3-PHJ"/>
-                </scrollView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cartao" translatesAutoresizingMaskIntoConstraints="NO" id="oiH-YW-R3V">
+                    <rect key="frame" x="16" y="60" width="382" height="237"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="63.768115942028992" y="60.9375"/>
+            <constraints>
+                <constraint firstItem="oiH-YW-R3V" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="H4G-xc-UGO"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="oiH-YW-R3V" secondAttribute="trailing" constant="16" id="qhI-h7-wDH"/>
+                <constraint firstItem="oiH-YW-R3V" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="tzQ-Nd-026"/>
+            </constraints>
+            <point key="canvasLocation" x="132" y="91"/>
         </view>
     </objects>
     <resources>
+        <image name="cartao" width="352.79190063476562" height="237.1036376953125"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
