--- a/BancoDigital/View/CardTableViewCell.xib
+++ b/BancoDigital/View/CardTableViewCell.xib
@@ -9,40 +9,90 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="472" id="KGk-i7-Jjw" customClass="CardTableViewCell" customModule="BancoDigital" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="472"/>
+        <tableViewCell contentMode="center" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CardTableViewCell" customModule="BancoDigital" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="564"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="472"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="564"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cartao" translatesAutoresizingMaskIntoConstraints="NO" id="Ta9-4F-ObA">
-                        <rect key="frame" x="19" y="117.5" width="352.5" height="237"/>
+                        <rect key="frame" x="19" y="32" width="352.5" height="237"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saldo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7NX-dQ-VLU">
-                        <rect key="frame" x="173.5" y="370.5" width="43" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fatura Aberta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7NX-dQ-VLU">
+                        <rect key="frame" x="143" y="285" width="104" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 8.123,32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqQ-Mj-BAC">
-                        <rect key="frame" x="130.5" y="407.5" width="129.5" height="29"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 2.833,12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqQ-Mj-BAC">
+                        <rect key="frame" x="130" y="321.5" width="130" height="29"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="173" translatesAutoresizingMaskIntoConstraints="NO" id="Wjp-7Z-0aQ">
+                        <rect key="frame" x="20" y="374.5" width="350" height="20.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vencimento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zia-Lb-BeP">
+                                <rect key="frame" x="0.0" y="0.0" width="350" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01/09/2021" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJQ-vE-HTU">
+                                <rect key="frame" x="0.0" y="0.0" width="350" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="zia-Lb-BeP" firstAttribute="centerX" secondItem="Wjp-7Z-0aQ" secondAttribute="centerX" id="9UG-fL-N2Y"/>
+                            <constraint firstItem="rJQ-vE-HTU" firstAttribute="centerX" secondItem="Wjp-7Z-0aQ" secondAttribute="centerX" id="xpU-MQ-huh"/>
+                        </constraints>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="173" translatesAutoresizingMaskIntoConstraints="NO" id="xKd-0c-ho9">
+                        <rect key="frame" x="20" y="419" width="350" height="20.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Limite Disponível" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3v-XV-zK0">
+                                <rect key="frame" x="0.0" y="0.0" width="350" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 31.321,98" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfb-ph-5CE">
+                                <rect key="frame" x="251" y="0.0" width="99" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="j3v-XV-zK0" firstAttribute="centerX" secondItem="xKd-0c-ho9" secondAttribute="centerX" id="BHh-2K-UK8"/>
+                            <constraint firstItem="Zfb-ph-5CE" firstAttribute="centerX" secondItem="xKd-0c-ho9" secondAttribute="centerX" id="DsC-HR-fdI"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="xKd-0c-ho9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="1Aq-3a-Xug"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Wjp-7Z-0aQ" secondAttribute="trailing" id="6jk-bd-P1P"/>
+                    <constraint firstItem="Wjp-7Z-0aQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="EfQ-LS-Vjv"/>
                     <constraint firstItem="Ta9-4F-ObA" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="GG3-F3-7p6"/>
-                    <constraint firstItem="Ta9-4F-ObA" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="gNX-KP-y3A"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="xKd-0c-ho9" secondAttribute="trailing" id="KP8-Qr-kRo"/>
+                    <constraint firstItem="Wjp-7Z-0aQ" firstAttribute="top" secondItem="RqQ-Mj-BAC" secondAttribute="bottom" constant="24" id="PmI-dw-ETC"/>
+                    <constraint firstItem="Ta9-4F-ObA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="Yx9-qh-5HB"/>
                     <constraint firstItem="RqQ-Mj-BAC" firstAttribute="top" secondItem="7NX-dQ-VLU" secondAttribute="bottom" constant="16" id="imO-fZ-ejl"/>
                     <constraint firstItem="7NX-dQ-VLU" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ip8-c5-1yL"/>
+                    <constraint firstItem="Wjp-7Z-0aQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mjf-u8-VD6"/>
+                    <constraint firstItem="xKd-0c-ho9" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="o1H-GD-aLP"/>
+                    <constraint firstItem="xKd-0c-ho9" firstAttribute="top" secondItem="Wjp-7Z-0aQ" secondAttribute="bottom" constant="24" id="qXL-Y9-tb4"/>
                     <constraint firstItem="7NX-dQ-VLU" firstAttribute="top" secondItem="Ta9-4F-ObA" secondAttribute="bottom" constant="16" id="rtQ-fC-1vN"/>
                     <constraint firstItem="RqQ-Mj-BAC" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="xWs-W7-eVD"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="182.60869565217394" y="143.30357142857142"/>
+            <point key="canvasLocation" x="194" y="157"/>
         </tableViewCell>
     </objects>
     <resources>
